--- a/static/index.html
+++ b/static/index.html
@@ -63,7 +63,7 @@
   </div>
 
   <script>
-  const API_BASE = "https://rag-production-1694.up.railway.app";
+  const API_BASE = "https://rag-production-dfb0.up.railway.app";
 
   const dropZone = document.getElementById("dropZone");
   const fileInput = document.getElementById("fileInput");
