removed the trailing slash

--- a/static/index.html
+++ b/static/index.html
@@ -62,7 +62,7 @@
   </div>
 
   <script>
-  const API_BASE = "https://rag-00n8.onrender.com/";
+  const API_BASE = "https://rag-00n8.onrender.com";
 
   const dropZone = document.getElementById("dropZone");
   const fileInput = document.getElementById("fileInput");
